# autobyteus

./: .env.example  .env.test  .gitignore  AGENTS.md  ARCHITECTURE.md  GEMINI.md  MANIFEST.in  PROJECT_OVERVIEW.md  README.MD  README.md  agent_logs.txt  agent_logs_skill.txt  cleaned_result.html  feature_design.schema  pyproject.toml  requirements-linux.txt  requirements.dev.txt  requirements.txt  setup.py  test_weibo_poster.py
autobyteus/: models.toml
cli/: agent_cli.py  cli_display.py
code_review_output/: fibonacci.py  fibonacci_generator.py
conductor/: tracks.md
docker/: docker-compose.yml  start.sh
docs/: agent_lifecycle_and_status.md  agent_memory_design.md  agent_memory_implementation_plan.md  agent_processor_and_engine_design.md  agent_team_design.md  agent_team_runtime_and_task_coordination.md  agent_team_streaming_protocol.md  agents.md  api_tool_call_file_streaming_design.md  api_tool_call_streaming_design.md  bash_executor_design.md  context_compaction.md  event_driven_core_design.md  implementation-plan.md  implementation-progress.md  lifecycle_event_sourced_engine_design.md  llm_module_design.md  local_engine_deployment.md  local_engine_integration.md  simulated-runtime-call-stack.md  skills_design.md  skills_modules.md  streaming_parser_design.md  terminal_tools.md  terminal_wsl_tmux_backend_design.md  tool_call_formatting_and_parsing.md  tool_parsing_strategies.md  tool_schema_and_configuration.md
documentation/: documentation.schema  subtasks.txt  transactional_LLM_operations
examples/: GEMINI_PPTX_README.md  GEMINI_SLIDES_README.md  GOOGLE_SLIDES_CLI_README.md  README_twitter_scraping.md  agent_logs.txt  discover_status_transitions.py  final_google_slides_cli.py  gemini_pptx_generator.py  gemini_pptx_slides.py  gemini_slide_save.py  powerpoint_generation_agent.py  ppt_agent.py  ppt_multi.py  rich_slides_example.py  run_agent_with_skill.py  (+11 more)
(+1689 files in other folders)
